--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+accelerate==0.29.1
 antlr4-python3-runtime==4.9.3
+bitsandbytes==0.43.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -37,6 +39,7 @@ pillow==10.2.0
 pox==0.3.4
 ppft==1.7.6.8
 protobuf==4.25.3
+psutil==5.9.8
 pycparser==2.22
 PyExecJS==1.5.1
 PyYAML==6.0.1
