--- a/image2text/config/imagecap_server.yaml
+++ b/image2text/config/imagecap_server.yaml
@@ -1,6 +1,6 @@
 model:
   _target_: img_server.ImageCaptionModel
-  model_id: "llava-hf/llava-1.5-7b-hf"
+  model_type: "blip"
   use_only_cuda: False
   use_translator: True
   translator: 'google'
