--- a/text2voice/docker/Dockerfile
+++ b/text2voice/docker/Dockerfile
@@ -8,7 +8,17 @@ WORKDIR /app
 ADD requirements.txt /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# RUN pip install --no-cache-dir -r requirements.txt \
+#     -i https://pypi.tuna.tsinghua.edu.cn/simple \
+#     --trusted-host pypi.tuna.tsinghua.edu.cn \
+#     --default-timeout=300 --retries=5
+
+COPY ./pip_packages /tmp/pip_packages
+
+# Install from local packages
+RUN pip install --no-cache-dir \
+    --find-links=/tmp/pip_packages \
+    -r requirements.txt
 
 # Make port 80 available to the world outside this container
 RUN mkdir -p /app/data
